[gd_scene load_steps=2 format=3 uid="uid://cusvpapugmj0y"]

[ext_resource type="Script" uid="uid://bc0m13i1xti1w" path="res://settings.gd" id="1_x2hje"]

[node name="Settings" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_x2hje")

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.15
anchor_right = 1.0
anchor_bottom = 0.15
grow_horizontal = 2
theme_override_font_sizes/font_size = 44
text = "Settings"
horizontal_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.25
anchor_top = 0.3
anchor_right = 0.75
anchor_bottom = 0.8

[node name="HSlider" type="HSlider" parent="VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/HSlider"]
layout_mode = 1
anchors_preset = -1
anchor_top = -1.0
anchor_right = 0.2
anchor_bottom = -1.0
grow_horizontal = 2
grow_vertical = 2
text = "Volum"

[node name="MuteCheckButton" type="CheckButton" parent="VBoxContainer"]
layout_mode = 2
text = "Muted"

[node name="FullscreenCheckButton" type="CheckButton" parent="VBoxContainer"]
layout_mode = 2
text = "Pantalla completa"

[node name="Button" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.425
anchor_top = 0.5
anchor_right = 0.55
anchor_bottom = 0.55
text = "Enrere"

[connection signal="value_changed" from="VBoxContainer/HSlider" to="." method="_on_h_slider_value_changed"]
[connection signal="toggled" from="VBoxContainer/MuteCheckButton" to="." method="_on_check_button_toggled"]
[connection signal="toggled" from="VBoxContainer/FullscreenCheckButton" to="." method="_on_fullscreen_check_button_toggled"]
[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
